deployment-onchain-vk-monitor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: onchain-vk-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: onchain-vk-monitor
  template:
    metadata:
      labels:
        app: onchain-vk-monitor
    spec:
      containers:
      - name: main
        image: python:3.9-slim
        command: ["/bin/sh", "-c"]
        args:
          - >
            apt-get update && apt-get install -y wget &&
            wget -q https://raw.githubusercontent.com/zjma/on-chain-vk-monitor/refs/heads/main/main.py &&
            python3 main.py
