deployment-prover-ceremony123.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prover-ceremony123
spec:
  replicas: 1 # Managed by HPA
  selector:
    matchLabels:
      app: prover-ceremony123
  template:
    metadata:
      labels:
        app: prover-ceremony123
    spec: {} # Corresponding images, etc.
