deployment-prover-ceremony124.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prover-ceremony124
  labels:
    zhoujun-debug-20250326: v0
spec:
  replicas: 1 # Managed by HPA
  selector:
    matchLabels:
      app: prover-ceremony124
  template:
    metadata:
      labels:
        app: prover-ceremony124
        zhoujun-debug-20250326: v0
    spec:
      containers:
        - name: main
          image: nginxdemos/hello
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
