service-prover-ceremony123.yaml
apiVersion: v1
kind: Service
metadata:
  name: prover-ceremony123
  labels:
    zhoujun-debug-20250326: v0
    twpk: 0x1388de358cf4701696bd58ed4b96e9d670cbbb914b888be1ceda6374a0000
spec:
  selector:
    app: prover-ceremony123
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
