service-vk-monitoring-router.yaml
apiVersion: v1
kind: Service
metadata:
  name: vk-monitoring-router
  labels:
    zhoujun-debug-20250326: v0
spec:
  type: NodePort
  selector:
    app: vk-monitoring-router
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
