httproute-forward-to-latest.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forward-to-latest
  namespace: keyless-devnet
  labels:
    zhoujun-debug-20250326: v0
spec:
  hostnames:
    - prover.keyless.devnet.aptoslabs.com
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: keyless-prover
    namespace: keyless-devnet
    sectionName: https
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /v0/prove
    - path:
        type: PathPrefix
        value: /cached
    - path:
        type: PathPrefix
        value: /meta
    - path:
        type: PathPrefix
        value: /healthcheck
    backendRefs:
    - group: ""
      kind: Service
      name: keyless-prover
      port: 8080
